--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:z1PeJ/dMPnPaBUwHPG63id0DBlxYKWKyd7F4VkgYawY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
