--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,16 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Listen for Xdebug",
-            "type": "php",
-            "request": "launch",
-            "port": 9003,
-            "stopOnEntry": true,
-            "log": true,
-            "pathMappings": {
-                "/var/www/html/web": "${workspaceFolder}/wordpress/web"
-            },
-        },
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Listen for Xdebug",
+      "type": "php",
+      "request": "launch",
+      "port": 9003,
+      "stopOnEntry": true,
+      "log": true,
+      "pathMappings": {
+        "/var/www/html": "${workspaceFolder}/backend"
+      }
+    }
+  ]
 }
